# calculator-ci-cd

./: CMakeLists.txt
.github/workflows/: ci.yml  cppcheck.yml
tests/: calculator_test.cpp
